# carmain

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  Makefile  README.en.md  README.md  README.ru.md  __init__.py  alembic.ini  backup_db.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  gunicorn.conf.py  hello.py  migrate_with_pgloader.py  nginx.conf  pyproject.toml  pytest.ini  requirements.txt  restore_db.sh  shell.py
.github/workflows/: docker-publish.yml
carmain/: __init__.py  bootstrap.py  main.py
carmain/admin/: items.py  records.py  users.py  vehicles.py
carmain/backend/: __init__.py  db.py
carmain/core/: admin_auth.py  backend.py  config.py  container.py  database.py  db.py  security.py
carmain/migrations/: env.py
carmain/migrations/versions/: 324bd1152169_initial_schema.py
carmain/models/: auth.py  items.py  records.py  users.py  vehicles.py
carmain/repository/: base_repository.py  maintenance_repository.py  record_repository.py  repository.py  user_repository.py  vehicle_repository.py
carmain/routers/: auth.py  vehicle_router.py
carmain/routers/v1/: auth_router.py  vehicle_router.py
carmain/schema/: auth.py  user_schema.py  users.py  vehicle_schema.py
carmain/schemas/: maintenance_schema.py  user_schema.py  vehicle_schema.py
carmain/services/: auth_service.py  base_service.py  email_service.py  file_service.py  maintenance_service.py  user_service.py  vehicle_service.py
carmain/static/: carmain.webmanifest
carmain/static/css/: maintenance-directory.css
carmain/static/js/: maintenance-directory.js
carmain/templates/: _back_button.html  _modals.html  _service_modals.html  _vehicle_modals.html  add_vehicle_card.html  base.html  error_partial.html  garage.html  index.html  login.html  maintenance_directory.html  maintenance_directory_card.html  maintenance_directory_list.html  maintenance_items.html  maintenance_items_add.html  maintenance_items_all.html  maintenance_items_list.html  service_records.html  service_records_list.html  signup.html  vehicle.html  vehicle_card.html  vehicle_list.html
carmain/utils/: maintenance_utils.py
carmain/views/: auth_router.py
carmain/views/v1/: maintenance_view.py  service_view.py  vehicle_view.py
docker/: pg_hba.conf
tests/: conftest.py
tests/core/: test_backend.py
tests/repository/: test_file_service.py  test_maintenance_repository.py  test_record_repository.py  test_user_repository.py  test_vehicle_repository.py
tests/services/: test_auth_service.py  test_maintenance_service.py  test_user_service.py  test_vehicle_service.py
