[project]
name = "carmain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
name = "carmain"
version = "0.0.0"
description = ""
authors = ["Alexander Koval <alexander.koval.88@gmail.com>"]
readme = "README.md"
packages = [{include = "carmain"}]

[tool.poetry.dependencies]
python = "^3.12"
aiosqlite = "^0.20.0"
fastapi = {extras = ["all"], version = "^0.115.0"}
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
ruff = "^0.6.9"
ipython = "^8.28.0"
sqlalchemy = "^2.0.35"
dependency-injector = "^4.42.0"
markupsafe = "2.1.5"
alembic = "^1.13.3"
poetry-core = "^1.9.0"
poetry-plugin-export = "^1.8.0"
black = "^24.10.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"